--- a/themes/gauge_theme/static/css/getting_started.css
+++ b/themes/gauge_theme/static/css/getting_started.css
@@ -25,14 +25,23 @@
 #installation-selection .radioContainer {
     position: relative;
     width: 100%;
-    height: 13%;
+    height: 45px;
     margin: 5px;
     cursor: pointer;
-    padding-top: 1%;
+    padding-top: 10px;
     font-size: 15px;
     border-radius: 3px;
     background-color: #f2f2f2;
+    text-align: left;
+    padding-left: 46px;
 }
+
+.setup-selection h2 {
+    font-size: 18px;
+    font-weight: 600;
+    font-family: 'URWGeometric-Medium';
+    color: #000000;
+  }
 
 /* Hide the browser's default radio button */
 
@@ -47,15 +56,15 @@
     content: '\f192';
     font-family: FontAwesome;
     position: absolute;
-    bottom: 11%;
-    left: 4%;
+    bottom: 8px;
+    left: 14px;
     text-align: left;
 }
 
 #installation-selection .circle {
     position: absolute;
-    bottom: 30%;
-    left: 4%;
+    bottom: 15px;
+    left: 14px;
     border: 1px solid black;
     width: 12px;
     height: 12px;
@@ -66,7 +75,7 @@
     background-color: white;
     position: absolute;
     bottom: 18%;
-    left: 87%;
+    right: 16px;
     border: 0.5px solid grey;
     width: 25px;
     height: 25px;
@@ -142,8 +151,7 @@
     margin-right: 10px;
     border: 1px solid gray;
     border-radius: 3px;
-    padding: 5px;
-    margin: 0 10px;
+    padding: 1px;
     width: 35px;
     height: 35px;
 }
@@ -315,7 +323,7 @@
     background-color: #ffcc00;
     width: max-content;
     border-radius: 25px;
-    padding: 4px;
+    padding: 5px 14px;
     box-sizing: border-box;
     margin: 30px 0px;
 }
@@ -336,6 +344,9 @@
     height: 20px;
     width: 20px;
     margin-right: 5px;
+    position: relative;
+    top:5px;
+    left:5px;
 }
 
 .answers{
@@ -365,7 +376,6 @@
 .vscode-installation-note::after{
     content: url("../img/VScode_install.png");
     width: 100%;
-    display: flex;
 }
 
 .extension-link::after{
@@ -374,6 +384,8 @@
     height: 20px;
     width: 20px;
     margin-right: 5px;
+    position: relative;
+    top: 4px;
 }
 
 h3:has(.alternate-methods){
@@ -391,6 +403,8 @@ h3:has(.alternate-methods){
     display: inline-block;
     width: 20px;
     margin-left: 4px;
+    position: relative;
+    top: 4px;
 }
 
 .code-block {
@@ -414,10 +428,16 @@ h3:has(.alternate-methods){
 }
 
 .alternate-methods::after {
-    Content: url(../img/angle-right-solid.svg);
+    content: ' ';
+    width: 10px;
+    height: 10px;
+    position: relative;
     display: inline-block;
-    width: 9px;
-    margin-left: 9px;
+    border-left: 3px solid #000000;
+    border-top: 3px solid #000000;
+    transform: rotate(-135deg);
+    top: -3px;
+    left:16px;
 }
 
 .active-rhs-toc {
@@ -433,6 +453,7 @@ h3:has(.alternate-methods){
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     border-bottom: 1px solid #b1b1b1;
+    margin-bottom:30px;
 }
 
 .text-box {
@@ -458,11 +479,132 @@ ul.text-box li a {
 }
 span.installer-icon {
     font-family: 'URWGeometric-Medium';
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 600;
     color: #1e1e1e;
   } 
   span.installer-icon:before {
     position: relative;
-    top: 7px;
+    top: 10px;
   }
+
+  @media screen and (max-width: 768px) and (min-width: 660px) {
+    #installation-selection .setup-selection {
+        width: 33%;
+        text-align: center;
+        min-height: 300px;
+        display: flex;
+        flex-direction: column;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-bottom: 5px;
+        border-radius: 5px;
+        align-items: center;
+    }
+    #installation-selection .radioContainer {
+        position: relative;
+        width: 100%;
+        height: 45px;
+        margin: 5px;
+        cursor: pointer;
+        padding-top: 10px;
+        font-size: 15px;
+        border-radius: 3px;
+        background-color: transparent!important;
+        text-align: left;
+        padding-left: 40px;
+        padding-top: 6px;
+      }
+      .selection-icon {
+        display:none;
+      }
+      .docs-container {
+          margin: 10px;
+          padding-right: 60px!important;
+      }
+      .docs-container h2 {
+        font-size: 14px!important;
+        margin-right:auto;
+      }
+      .mobile-local-toc {
+        width: 150px!important;
+        display: block;
+        padding-left: 38px;
+      }
+      .localtoc-container > ul {
+        padding: 10px 30px!important;
+    }
+    .edit-page {
+        display: none;
+      }
+}
+
+@media (max-width:576px) {
+    #installation-selection .setup-selections {
+    display: flex;
+    flex-direction: column;
+    }
+    #installation-selection .setup-selection {
+        width: 100%;
+        text-align: center;
+        min-height: auto;
+        display: flex;
+        flex-direction: column;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-bottom: 5px;
+        border-radius: 5px;
+        align-items: center;
+    }
+    #installation-selection .radioContainer {
+        position: relative;
+        width: 100%;
+        height: 45px;
+        margin: 5px;
+        cursor: pointer;
+        padding:10px;
+        font-size: 15px;
+        border-radius: 3px;
+        background-color:#f2f2f2;;
+      }
+      .selection-icon {
+        display:block;
+      }
+      #installation-selection .circle {
+        left: 90px;
+      }
+      #installation-selection input:checked~.checkmark:after {
+        left: 90px;
+        bottom:8px;
+      }
+      .docs-container h2 {
+          margin-right: auto;
+      }
+      .selection-icon {
+       left: 280px;
+      }
+      .localtoc-container {
+        margin-bottom: 0px;
+    }
+    .mobile-local-toc {
+        text-align: center;
+        padding-left: 30px;
+    }
+    .localtoc-container > ul {
+        padding: 10px 30px;
+    }
+    .doc-toc-group.collapsed>a:after {
+        top: -4px!important;
+        left: 25px;
+    }
+    .doc-toc-group.expanded>a:after {
+        border-left: 3px solid black;
+        border-top: 3px solid black;
+        transform: rotate(45deg);
+        top: 2px;
+        left: 25px;
+    }
+    .edit-page {
+        display: none;
+      }
+}
