--- a/themes/gauge_theme/static/css/overview.css
+++ b/themes/gauge_theme/static/css/overview.css
@@ -19,11 +19,10 @@
 }
 
 .topic {
-    margin-top: 27px;
+    margin-top: 20px;
 }
 
 .topic h1{
     border-bottom: solid 1px #e2e2e2;
-    margin-bottom: 25px;
-    padding-bottom: 10px;
+    margin:0px;
 }
